public/styles/styles-main.css
/* ... */
.grow {
    display: flex;
    flex-grow: 1;
}

.grow-2 {
    display: flex;
    flex-grow: 2;
}

.shrink {
    display: flex;
    flex-shrink: 1;
}

.flex {
    display: flex;
}

.align-center {
    align-items: center;
}

.space-evenly {
    justify-content: space-evenly;
}

.space-between {
    justify-content: space-between;
}

.row {
    display: flex;
    flex-direction: row;
}

.row-reverse {
    display: flex;
    flex-direction: row-reverse;
}

.column {
    display: flex;
    flex-direction: column;
}

.center {
    display: flex;
    align-items: center;
    justify-content: center;
}

.full {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.pointer {
    cursor: pointer;
}

header {
    position: absolute;
    align-items: baseline;
    padding: 8px 12px;
    box-sizing: border-box;
    width: 100vw;
    z-index: 20;
    top: 0;
    right: 0;
}

header > .row-reverse > * {
    margin-left: 4px;
    margin-right: 4px;
}

header > .row-reverse > div {
    display: flex;
    flex-direction: column;
    align-self: flex-start;
    touch-action: manipulation;
}

header > .row-reverse > div .icon-button {
    height: 40px;
    transition: all 300ms;
}

header > .row-reverse > div > div {
    display: flex;
    flex-direction: column;
}

header > .row-reverse > div:not(:hover) .icon-button:not(.selected) {
    height: 0;
    opacity: 0;
}

#theme-wrapper:hover::before {
    border-radius: 20px;
    background: currentColor;
    opacity: 0.1;
    transition: opacity 300ms;
    content: '';
    position: absolute;
    width: 40px;
    top: 0;
    bottom: 0;
    margin-top: 8px;
    margin-bottom: 8px;
}

header > .row-reverse > div:hover .icon-button.selected::before {
    opacity: 0.1;
}

@media (pointer: coarse) {
    header > .row-reverse > div:hover .icon-button.selected:hover::before {
        opacity: 0.2;
    }

    header > .row-reverse > div .icon-button:not(.selected) {
        height: 0;
        opacity: 0;
        pointer-events: none;
    }

    header > .row-reverse > div > div {
        flex-direction: column-reverse;
    }
}

[hidden] {
    display: none !important;
}


/* Typography */

@font-face {
    font-family: "Open Sans";
    src: url('../fonts/OpenSans/static/OpenSans-Medium.ttf') format('truetype');
}

body {
    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    font-variant-ligatures: common-ligatures;
    font-kerning: normal;
}

h1 {
    font-size: 34px;
    font-weight: 400;
    letter-spacing: -.01em;
    line-height: 40px;
    margin: 0 0 4px;
}

h2 {
    font-size: 22px;
    font-weight: 400;
    letter-spacing: -.012em;
    line-height: 32px;
    color: var(--primary-color);}

h3 {
    font-size: 20px;
    font-weight: 500;
    margin: 16px 0;
    color: var(--primary-color);
}

.font-subheading {
    font-size: 14px;
    font-weight: 400;
    line-height: 18px;
    word-break: normal;
}

.text-center {
    text-align: center;
}

.text-white {
    color: white !important;
}

.font-body1,
body {
    font-size: 14px;
    font-weight: 400;
    line-height: 20px;
}

.font-body2 {
    font-size: 12px;
    line-height: 18px;
}

a,
.icon-button {
    text-decoration: none;
    color: currentColor;
    cursor: pointer;
}

input {
    cursor: pointer;
}

input[type="checkbox"] {
    min-width: 13px;
}

x-noscript {
    background: var(--primary-color);
    color: white;
    z-index: 2;
}


/* Icons */

.icon {
    width: var(--icon-size);
    height: var(--icon-size);
    fill: currentColor;
}



/* Shadows */

[shadow="1"] {
    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
        0 1px 8px 0 rgba(0, 0, 0, 0.12),
        0 3px 3px -2px rgba(0, 0, 0, 0.4);
}

[shadow="2"] {
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
        0 1px 10px 0 rgba(0, 0, 0, 0.12),
        0 2px 4px -1px rgba(0, 0, 0, 0.4);
}

.overflowing {
    background:
        /* Shadow covers */
            linear-gradient(rgb(var(--shadow-color-cover-rgb)) 30%, rgba(var(--shadow-color-cover-rgb), 0)),
            linear-gradient(rgba(var(--shadow-color-cover-rgb), 0), rgb(var(--shadow-color-cover-rgb)) 70%) 0 100%,
                /* Shadows */
            radial-gradient(farthest-side at 50% 0, rgba(var(--shadow-color-rgb), .2), rgba(var(--shadow-color-rgb), 0)),
            radial-gradient(farthest-side at 50% 100%, rgba(var(--shadow-color-rgb), .2), rgba(var(--shadow-color-rgb), 0))
            0 100%;
    background-repeat: no-repeat;
    background-size: 100% 60px, 100% 60px, 100% 24px, 100% 24px;
    background-attachment: local, local, scroll, scroll;
}


/* Animations */

@keyframes fade-in {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

#center {
    position: relative;
    display: flex;
    margin-top: 56px;
    flex-direction: column-reverse;
    flex-grow: 1;
    justify-content: space-around;
    align-items: center;
    overflow-x: hidden;
    overflow-y: scroll;
    overscroll-behavior-x: none;
}


/* Peers  */

#x-peers-filler {
    display: flex;
    flex-grow: 1;
}

x-peers {
    position: relative;
    display: flex;
    flex-flow: row wrap;
    flex-grow: 1;
    align-items: start !important;
    justify-content: center;

    z-index: 2;
    transition: background-color 0.5s ease;
    overflow-y: scroll;
    overflow-x: hidden;
    overscroll-behavior-x: none;
    scrollbar-width: none;

    --peers-per-row: 6; /* default if browser does not support :has selector */
    --x-peers-width: min(100vw, calc(var(--peers-per-row) * (var(--peer-width) + 25px) - 16px));
    width: var(--x-peers-width);
    margin-right: 20px;
    margin-left: 20px;
}

/* Empty Peers List */

x-no-peers {
    display: flex;
    flex-direction: column;
    padding: 8px;
    height: 137px;
    text-align: center;
}
/* ... */

